[package]
name = "clear-cube"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.33.1"
bevy_panorbit_camera = "0.27.1"
num = "0.4.3"
serde = { version = "1.0.219", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.140"
bevy_egui = "0.36.0"
rand = "0.9.2"
